@@ -189,10 +189,8 @@ enum ldns_enum_rr_type
 	LDNS_RR_TYPE_RKEY = 57,
         /** draft-ietf-dnsop-trust-history */
         LDNS_RR_TYPE_TALINK = 58,
-	/** draft-ietf-dnsop-delegation-trust-maintainance */
-	LDNS_RR_TYPE_CDS = 59,
-	/** draft-ietf-dnsop-delegation-trust-maintainance */
-	LDNS_RR_TYPE_CDNSKEY = 60,
+	LDNS_RR_TYPE_CDS = 59, /* RFC 7344 */
+	LDNS_RR_TYPE_CDNSKEY = 60, /* RFC 7344 */
 	/** draft-ietf-dane-openpgpkey */
 	LDNS_RR_TYPE_OPENPGPKEY = 61,
 
