@@ -16,9 +16,10 @@ TBD
 	* Fix configure to make ldns compile with LibreSSL 2.0
 	* drill now also accepts dig style -y option
 	  (-y <[algo:]name:key> i.s.o. -y <name:key[:algo]>)
-	* CDNSKEY and OPENPGPKEY draft rr types.
-	  enable with: --enable-rrtype-cdnskey and --enable-rrtype-openpgpkey
+	* OPENPGPKEY draft rr types. Enable with: --enable-rrtype-openpgpkey
 	* bugfix #608: Correct comment about escaped characters
+	* CDS and CDNSKEY rr type from RFC 7344.
+	  --enable-rrtype-cds configure option removed
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
